Temp? fix for too wide display -> overflow-x: hidden;

--- a/public/style.css
+++ b/public/style.css
@@ -8,6 +8,7 @@ body {
   width: 100%;
   margin: 0;
   padding: 0;
+  overflow-x: hidden;
   /* display: flex; */
   background-color: #1b1e1b;
   /* flex-direction: column;
